Compiler warnings fixes.